# strava-training-plan

./: README.md  pyproject.toml  test_authentication.py  training_plan.md
src/strava_intelligent_running_coach/: crew.py  main.py
src/strava_intelligent_running_coach/config/: agents.yaml  tasks.yaml
