[project]
name = "strava_intelligent_running_coach"
version = "0.1.0"
description = "strava_intelligent_running_coach using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "stravalib>=2.4",
]

[project.scripts]
strava_intelligent_running_coach = "strava_intelligent_running_coach.main:run"
run_crew = "strava_intelligent_running_coach.main:run"
train = "strava_intelligent_running_coach.main:train"
replay = "strava_intelligent_running_coach.main:replay"
test = "strava_intelligent_running_coach.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
